# slither-world

./: .gitignore  AGENTS.md  client_prediction_authoritative_plan.txt  infra-stack-and-autoscaling.txt  package-lock.json  package.json  run-dev.sh  run-e2e.sh  run-local-dev-copy.sh  vite.config.ts  worker-configuration.d.ts  wrangler.dev.toml  wrangler.jsonc  wrangler.toml
.codex/: config.toml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: main.rs  protocol.rs
backend/src/app/: mod.rs  room_name.rs  time.rs
backend/src/control/: cloud_init.rs  hetzner.rs  mod.rs  token.rs
backend/src/game/: constants.rs  digestion.rs  environment.rs  geometry.rs  input.rs  math.rs  mod.rs  physics.rs  room.rs  snake.rs  types.rs
backend/src/game/room/: session.rs  tests.rs  visibility.rs
backend/src/room_runtime/: mod.rs
backend/src/shared/: mod.rs  names.rs  room_token.rs
backend/src/standalone/: mod.rs
backend/src/transport/: ws_session.rs
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  worker-configuration.d.ts  wrangler.dev.toml  wrangler.jsonc  wrangler.toml
frontend/e2e/: helpers.ts  (+13 more)
infra/: deploy-cloudflare-hetzner.md  deployment-notes.md  prod-backend-image.txt
scripts/: debug-kill.sh  deploy-prod.sh  lag-autotune.sh  lag-bot-runner.mjs  print-room-fleet.sh  run-lag-automation.sh  simulate-lag-spikes.sh  tail-growth-playtest.sh  tail-growth-recorder.mjs
src/: App.css  App.tsx  gameTypes.ts  webglScene.ts
worker/: env.ts  game-room.ts  index.ts
(+137 files in other folders)
